--- a/source/sass/header.scss
+++ b/source/sass/header.scss
@@ -70,7 +70,7 @@
   display: none;
   width: 60px;
   height: 60px;
-  background: url("/img/nav-closed.svg");
+  background: url("../img/nav-closed.svg");
   background-repeat: no-repeat;
   background-color: $button-color;
   background-position: 50% 50%;
